Refactor code to improve readability and remove unnecessary comments

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -55,12 +55,17 @@
 
 \begin{abstract}    
     %! Llenar con el abstract
-    Me quieres?
+    Graph coloring is a fundamental problem in graph theory and combinatorial optimization,
+    where the goal is to assign colors to the vertices of a graph such that no two adjacent 
+    vertices share the same color. This problem has many applications in real-world problems
+    such as scheduling, register allocation, and frequency assignment. Despite its simplicity
+    in definition, the problem is NP-hard, making it computationally challenging for large and complex 
+    graphs.
 \end{abstract}
 
 %----------------------------------------------------------
 
-\keywords{Automata, Cellular, Genetic, Algorithms, Simulation}%! Modificar con las palabras clave
+\keywords{Particle Swarm Optimization (PSO), NP-hard Problems, Graph Theory, Algorithms, Minimum Graph Coloring}%! Modificar con las palabras clave
 
 %----------------------------------------------------------
 
