Add graph images and update results section

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -116,7 +116,24 @@
 
 
 \section{Resultados}
-
+% Agrega imagen graph.png
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\columnwidth]{MCGP/graph.png}
+        \caption{Grafo de 10 nodos}
+        \label{fig:graph}
+    \end{figure}
+    En la Figura~\ref*{fig:graph} se muestra un grafo de 10 nodos que no es totalmente conexo, el cual 
+    se utilizó para evaluar el algoritmo PSO propuesto.
+% Agrega imagen graphColored.png
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.5\columnwidth]{MCGP/graphColored.png}
+        \caption{Coloración del grafo de 10 nodos}
+        \label{fig:graphColored}
+    \end{figure}
+    En la Figura~\ref*{fig:graphColored} se muestra el resultado de la coloración del grafo de 10 nodos utilizando el algoritmo PSO propuesto.
+    Como se puede observar, se utilizan 4 colores para colorear el grafo.
 
 \section{Conclusiones}
 
