Refactor code to improve readability and remove unnecessary comments

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -133,7 +133,10 @@
         \label{fig:graphColored}
     \end{figure}
     En la Figura~\ref*{fig:graphColored} se muestra el resultado de la coloración del grafo de 10 nodos utilizando el algoritmo PSO propuesto.
-    Como se puede observar, se utilizan 4 colores para colorear el grafo.
+    Como se puede observar, se utilizan 4 colores para colorear el grafo. \\ 
+    En la salida de la terminal obtuvimos lo siguiente:
+    % Usando listings agrega el txt MCGP/salida.txt
+    \lstinputlisting[language=Python, caption=Salida del algoritmo PSO, label=lst:salida]{MCGP/salida.txt}
 
 \section{Conclusiones}
 
