Refactor code to improve readability and remove unnecessary comments

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -139,10 +139,9 @@
     \lstinputlisting[language=Python, caption=Salida del algoritmo PSO, label=lst:salida]{MCGP/salida.txt}
 
 \section{Conclusiones}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    En conclusión, la coloración minima de grafos es un problema fundamental en la teoría de grafos y gracias a sus amplias aplicaciones como
+    la asignación de horarios, asignación de frecuencias, asignación de canales, entre otros. Mediante la solución usando PSO hemos logrado solucionar el problema pasando de un tiempo NP 
+    a un tiempo polinomial. 
 
 \printbibliography
 
