Refactor code to improve readability and remove unnecessary comments

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -137,6 +137,8 @@
     En la salida de la terminal obtuvimos lo siguiente:
     % Usando listings agrega el txt MCGP/salida.txt
     \lstinputlisting[language=Python, caption=Salida del algoritmo PSO, label=lst:salida]{MCGP/salida.txt}
+    En esta salida podemos apreciar la rapidez con la que converge el algoritmo de PSO
+    para encontrar la coloración mínima del grafo de 10 nodos.
 
 \section{Conclusiones}
     En conclusión, la coloración minima de grafos es un problema fundamental en la teoría de grafos y gracias a sus amplias aplicaciones como
